<resources>
    <string name="app_name">MyBank App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_button_test">Login!</string>
    <string name="dots">...</string>
    <string name="send_money">Send money</string>
    <string name="current_balance">Current balance</string>
    <string name="account_number">account number</string>
    <string name="cashicon">cashIcon</string>
    <string name="cash_chars">$$$</string>
    <string name="logout">logout</string>
    <string name="transactions_history">Transactions history</string>
</resources>